[gd_scene load_steps=3 format=3 uid="uid://cdlq4hpe1kc4i"]

[ext_resource type="Script" path="res://scenes/gui.gd" id="1_m4x4y"]
[ext_resource type="FontFile" uid="uid://6gvg5ooct832" path="res://font/ArefRuqaaInk-Bold.ttf" id="2_0phkp"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4x4y")

[node name="SummonsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 215.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0phkp")
text = "sum sum summons -> 0"

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 16.0
offset_right = 1127.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 48
text = "x 0"
horizontal_alignment = 2

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 16.0
offset_right = 704.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 32
text = "99999"
horizontal_alignment = 1

[node name="GameOverPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 736.0
offset_top = 416.0
offset_right = 1120.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(0.556863, 0.556863, 0.556863, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 64
text = "Game over"
horizontal_alignment = 1

[node name="MaxComboLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 56.0
offset_top = 568.0
offset_right = 440.0
offset_bottom = 616.0
theme_override_colors/font_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/font_outline_color = Color(0.0313726, 0.0627451, 0.109804, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 32
text = "max combo -> 99999"
horizontal_alignment = 1

[node name="GOSummonsLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 512.0
offset_right = 480.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(0.541176, 0.541176, 0.541176, 1)
theme_override_colors/font_outline_color = Color(0.0313726, 0.0627451, 0.109804, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 32
text = "sum sum summons 9999999"
horizontal_alignment = 1

[node name="GOPointsLabel" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 56.0
offset_top = 440.0
offset_right = 451.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(0.764706, 0.764706, 0.764706, 1)
theme_override_colors/font_outline_color = Color(0.0313726, 0.0627451, 0.109804, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("2_0phkp")
theme_override_font_sizes/font_size = 48
text = "points -> 9999999"
horizontal_alignment = 1

[node name="pressspaceLab" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 808.0
offset_top = 544.0
offset_right = 1056.0
offset_bottom = 568.0
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_0phkp")
text = "press space to restart"
horizontal_alignment = 1

[node name="pressspaceLab2" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 808.0
offset_top = 584.0
offset_right = 1067.0
offset_bottom = 608.0
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0588235, 0.105882, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_0phkp")
text = "press enter to return to the menu"
horizontal_alignment = 1
